--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/parent?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/example?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Ram@9006163164
+spring.datasource.password=root
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
